--- a/blog/templates/blog/all_blogs.html
+++ b/blog/templates/blog/all_blogs.html
@@ -3,19 +3,23 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
+    <title>Blogs</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
   <body>
     <div class="container text-center">
-      <h1>Some Home Page</h1>
-      {% for project in projects %}
-      <h2>{{ project.title }}</h2>
-      <p>{{ project.description }}</p>
-      <img src="{{ project.image.url }}" height=500 width=500>
-      {% if project.url %}
-      <br><a href="{{ project.url }}">Link</a>
-      {% endif %}
+      <h1>Blog</h1>
+      <h2>I have written {{ blogs_num }} blogs</h2>
+    </div>
+    <div class="container">
+      {% for blog in blogs %}
+        {% if blog.url %}
+          <a href='{{ blog.url }}' class="link-primary">{{ blog.title }}<a>
+        {% else %}
+            <a href='#'>{{ blog.title }}<a>
+        {% endif %}
+        <h3>{{ blog.date }}</h3>
+        <p>{{ blog.description }}</p>
       {% endfor %}
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
