--- a/blog/templates/blog/all_blogs.html
+++ b/blog/templates/blog/all_blogs.html
@@ -14,9 +14,9 @@
     <div class="container">
       {% for blog in blogs %}
         {% if blog.url %}
-          <a href='{{ blog.url }}' class="link-primary">{{ blog.title }}<a>
+          <a href='{{ blog.url }}' class="link-primary">{{ blog.title }}</a>
         {% else %}
-            <a href='#'>{{ blog.title }}<a>
+            <a href='#'>{{ blog.title }}</a>
         {% endif %}
         <h3>{{ blog.date }}</h3>
         <p>{{ blog.description }}</p>
