--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -3,20 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Blogs</title>
+    <title>{{ blog.title }}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
   <body style="word-wrap: break-word">
     <div class="container text-center">
-      <h1>Blog</h1>
-      <h2>I have written {{ blogs.count }} blog{{ blogs.count|pluralize }}</h2>
-    </div>
-    <div class="container">
-      {% for blog in blogs %}
-        <a href="{% url 'blog:detail' blog.id %}" class="link-primary"><h2>{{ blog.title }}</h2></a> <!-- HOW TO GO TO A PARTICULAR BLOG BY ID-->
-        <h5>{{ blog.date|date:'M d Y'|upper }}</h5>
-        <p>{{ blog.description|truncatechars:100 }}</p>
-      {% endfor %}
+      <h1>{{ blog.title }}</h1>
+      <div class="container">
+        <p>{{ blog.description|safe }}</p>
+      </div>
+      <h5>--Date: {{ blog.date|date:'F jS Y' }}--</h5>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
