--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -1,19 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ blog.title }}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  </head>
-  <body style="word-wrap: break-word">
-    <div class="container text-center">
-      <h1>{{ blog.title }}</h1>
-      <div class="container">
-        <p>{{ blog.description|safe }}</p>
-      </div>
-      <h5>--Date: {{ blog.date|date:'F jS Y' }}--</h5>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-  </body>
-</html>
+{% extends 'portfolio/base.html' %}  <!-- import base.html as a template -->
+
+{% block title %}<title> {{ blog.title }} </title>{% endblock %}
+
+{% block content %} <!-- match the name inside the base.html -->
+
+{% load static %}
+
+<h1 class="text-center mt-5" id="blogdetailtitle">{{ blog.title }}</h1>
+
+<h5 class="text-center text-muted mb-5">{{ blog.date|date:'F jS Y' }}</h5>
+
+{{ blog.description|safe }}
+
+{% endblock %}
