--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -1,46 +1,63 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'portfolio/base.html' %}
+<!-- import base.html as a template -->
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Home</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-</head>
+{% block title %}<title> Home </title>{% endblock %}
 
-<body>
-  <nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'home' %}">
-        <img src="https://getbootstrap.com/docs/5.2/assets/brand/bootstrap-logo.svg" alt="image-logo" width="30" height="24">
-      </a>
-      <a class="navbar-brand" href="{% url 'blog:all_blogs' %}">Blogs</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+{% block content %}
+<!-- match the name inside the base.html -->
+
+{% load static %}
+<div class="container text-center">
+  <h1>Some Home Page</h1>
+  <img src="{% static 'portfolio/butterssalute.jpg' %}"><br>
+  <!-- <a href="{% static 'portfolio/butterssalute.jpg'%}">Image Source</a><br> -->
+  <div class="card-group">
+    {% for project in projects %}
+    <div class="card" style="width: 1rem;">
+      <img src="{{ project.image.url }}" class="card-img-top img-fluid mb-2" alt="img-chosen">
+      <div class="card-body">
+        <h5 class="card-title">{{ project.title }}</h5>
+        <p class="card-text">{{ project.description }}</p>
+        {% if project.url %}
+        <a href="{{ project.url }}" class="stretched-link"></a>
+        {% endif %}
       </div>
     </div>
-  </nav>
-
-  {% load static %}
-  <div class="container text-center">
-    <h1>Some Home Page</h1>
-    <img src="{% static 'portfolio/butterssalute.jpg' %}"><br>
-    <!-- <a href="{% static 'portfolio/butterssalute.jpg'%}">Image Source</a><br> -->
-    <a href="{% url 'blog:all_blogs' %}">
-      <h2>Blogs</h2>
-    </a><br>
-    {% for project in projects %}
-    <h2>{{ project.title }}</h2>
-    <p>{{ project.description }}</p>
-    <img src="{{ project.image.url }}" height=500 width=500>
-    {% if project.url %}
-    <br><a href="{{ project.url }}">Link</a>
-    {% endif %}
     {% endfor %}
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-</body>
+</div>
 
-</html>
+<div class="row justify-content-center my-3">
+  <div class="col-5">
+    <img src="{% static 'portfolio/SquareBlonde.jpg' %}" class="img-fluid">
+  </div>
+</div>
+
+<div class="row justify-content-center mb-3">
+  <div class="col-md-9 text-center">
+    <h1 id="hometext" class="font-weight-bold">Nick Walter is Commander-in-Chief at ZappyCode and lives in Downtown Tokyo 😊</h1>
+  </div>
+</div>
+
+<h2 class="mt-5">Portfolio</h2>
+<hr>
+<div class="row">
+  {% for project in projects %}
+  <div class="col-lg-4 col-md-6">
+
+    {% if project.url %}
+    <a href="{{ project.url }}">
+      <img src="{{ project.image.url }}" class="img-fluid mb-2">
+    </a>
+    {% else %}
+
+    <img src="{{ project.image.url }}" class="img-fluid mb-2">
+    {% endif %}
+    <h3>{{ project.title }}</h3>
+    <p>{{ project.description }}</p>
+
+  </div>
+  {% endfor %}
+</div>
+
+{% endblock %}
