--- a/blog/templates/blog/all_blogs.html
+++ b/blog/templates/blog/all_blogs.html
@@ -6,18 +6,19 @@
 
 {% load static %}
 
-<h1 id="blogtitle" class="font-weight-bold text-center">Blog</h1>
-
-<h3 class="text-center mb-5">Bobik has written {{ blogs.count }} blog{{ blogs.count|pluralize }}</h3>
+<div class="bd-masthead-blogs mb-3" id="content">
+  <h1 id="blogtitle" class="font-weight-bold text-center">Blog</h1>
+  <h3 class="text-center mb-5">Butters has written {{ blogs.count }} blog{{ blogs.count|pluralize }}</h3>
+</div>
 
 {% for blog in blogs %}
 <div class="row my-3">
   <div class="col-md-10">
-    <a href="{% url 'blog:detail' blog.id %}" class="text-decoration-none">
+    <a href="{% url 'blog:detail' blog.id %}" class="text-decoration-none link-danger">
       <h2>{{ blog.title }}</h2>
     </a>
     <h5 class="text-muted">{{ blog.date|date:'M d Y'|upper }}</h5>
-    <h4>{{ blog.description|striptags|truncatechars:100 }}</h4>
+    <h4>{{ blog.description|striptags|truncatechars:85 }}</h4>
   </div>
 </div>
 {% endfor %}
