--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 
 <head>
@@ -6,28 +7,62 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {% block title %} {% endblock %}
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link rel="stylesheet" href="{% static 'portfolio/custom.css' %}">
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+  <link rel="icon" type="image/x-icon" href="https://findicons.com/files/icons/213/south_park/300/butters_professor_chaos_head_icon.png">
+  <script src="https://kit.fontawesome.com/0df284c89f.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-md">
+  <header class="navbar navbar-expand-lg sticky-top bg-white navbar_inner">
     <div class="container">
-        <a class="navbar-brand" href="{% url 'home' %}">
-          <img src="https://avatanplus.com/files/resources/original/5a578564aced9160e5e11164.png" alt="image-logo" width="40" height="40" class="d-inline-block align-top">
-        </a>
-        <a class="navbar-brand" href="{% url 'blog:all_blogs' %}">Blogs</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        </div>
+      <a class="navbar-brand" href="{% url 'home' %}">
+        <img src="https://findicons.com/files/icons/213/south_park/300/butters_professor_chaos_head_icon.png" alt="image-logo" width="40" height="40" class="d-inline-block align-top">
+
+      </a>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="navbar-brand mb-0 h1 navigation_link" href="{% url 'home' %}">Wienersout</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="navbar-brand navigation_link" href="{% url 'blog:all_blogs' %}">Blogs</a>
+        </li>
+      </ul>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      </div>
     </div>
-  </nav>
+  </header>
 
   <div class="container">
-  {% block content %}
-  <!-- block <any-name-here> -->
-  {% endblock %}
+    {% block content %}
+    <!-- block <any-name-here> -->
+    {% endblock %}
   </div>
+
+  <footer id="footer" class="text-center">
+    <div class='container'>
+      <hr>
+    </div>
+    <div class="container-fluid cta-container">
+      <div class='row footer-row'>
+
+        <h5>
+          <a href="https://www.twitter.com/" class="link-dark"><i class="fa-brands fa-twitter footer-icons"></i></a>
+          <a href="https://www.facebook.com/" class="link-dark"><i class="fa-brands fa-facebook-f footer-icons"></i></a>
+          <a href="https://www.instagram.com/" class="link-dark"><i class="fa-brands fa-instagram footer-icons"></i></a>
+          <a href="https://www.youtube.com/" class="link-dark"><i class="fa-solid fa-envelope footer-icons"></i></a>
+        </h5>
+
+        <p class='footer-paragraph'>© Butters Stotch</p>
+      </div>
+    </div>
+
+  </footer>
 
   <!-- Java Script -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
