New Local Settings

--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -10,7 +10,7 @@
 <div class="bd-masthead mb-3" id="content">
   <div class="container text-center">
     <img src="{% static 'portfolio/FloweryThirstyCobra-size_restricted.gif' %}"><br>
-    <h1 class="main_home_text mb-3 fw-semibold">My First Portfolio Website on Django</h1>
+    <h1 class="main_home_text mb-3 fw-semibold">My First Portfolio Site on Django</h1>
     <!-- <a href="{% static 'portfolio/butterssalute.jpg'%}">Image Source</a><br> -->
   </div>
 </div>
